# bioformats-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  data.js
.github/workflows/: audit.yml  benchmark.yml  clippy.yml  coverage.yml  publish.yml  workflow.yml
benches/: bench_read.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
examples/wsi/: Cargo.toml  README.md
examples/wsi/src/: main.rs
src/: fixture.rs  lib.rs
src/bindings/: error.rs  mod.rs  utils.rs
src/bindings/metadata/: hashtable.rs  mod.rs  omexml.rs
src/bindings/reader/: format.rs  image.rs  memoizer.rs  mod.rs
src/bindings/tools/: debug.rs  mod.rs
src/extra/: mod.rs  models.rs  utils.rs
src/extra/wsi/: deepzoom.rs  error.rs  mod.rs  slide.rs
