[package]
name = "bioformats-rs"
version = "1.1.0"
edition = "2021"
authors = ["AzHicham <hicham.azimani1@gmail.com>"]
description = "Rust bindings of Bioformats Java library"
repository = "https://github.com/AzHicham/bioformats-rs"
homepage = "https://github.com/AzHicham/bioformats-rs"
readme = "README.md"
keywords = ["bioformats"]
categories = ["science"]
license = "MIT/Apache-2.0"
rust-version = "1.75.0"
build = "build.rs"

[features]
default = []
gpl-formats = []
extra = ["dep:image", "dep:fast_image_resize", "dep:derivative"]

[dependencies]
thiserror = { version = "1.0", features = [] }
j4rs = { version = "0.20", features = [] }
serde = { version = "1.0", features = [] }

# Optional dependencies
derivative = { version = "2.2", features = [], optional = true }
image = { version = "0.25", optional = true, default-features = false }
fast_image_resize = { version = "4.2", features = ["image"], optional = true }

[dev-dependencies]
rstest = "0.22"
bencher = "0.1"

[build-dependencies]
j4rs = { version = "0.20", features = [] }
retry = { version = "2.0.0"}
anyhow = { version = "1.0"}


[[bench]]
name = "bench_read"
harness = false
