[package]
name = "bioformats-rs"
version = "1.3.0"
edition = "2024"
authors = ["AzHicham <hicham.azimani1@gmail.com>"]
description = "Rust bindings of Bioformats Java library"
repository = "https://github.com/AzHicham/bioformats-rs"
homepage = "https://github.com/AzHicham/bioformats-rs"
readme = "README.md"
keywords = ["bioformats"]
categories = ["science"]
license = "MIT/Apache-2.0"
rust-version = "1.87.0"
build = "build.rs"

[features]
default = []
gpl-formats = []
extra = ["dep:image", "dep:fast_image_resize", "dep:derivative"]

[dependencies]
thiserror = { version = "2", features = [] }
j4rs = { version = "0.22", features = [] }
serde = { version = "1", features = [] }

# Optional dependencies
derivative = { version = "2", features = [], optional = true }
image = { version = "0.25", optional = true, default-features = false }
fast_image_resize = { version = "5", features = ["image"], optional = true }

[dev-dependencies]
rstest = "0.26"
bencher = "0.1"

[build-dependencies]
j4rs = { version = "0.22", features = [] }
retry = { version = "2"}
anyhow = { version = "1"}


[[bench]]
name = "bench_read"
harness = false
