[package]
name = "bioformats-rs"
version = "1.3.0"
edition = "2024"
authors = ["AzHicham <hicham.azimani1@gmail.com>"]
description = "Rust bindings of Bioformats Java library"
repository = "https://github.com/AzHicham/bioformats-rs"
homepage = "https://github.com/AzHicham/bioformats-rs"
readme = "README.md"
keywords = ["bioformats"]
categories = ["science"]
license = "MIT/Apache-2.0"
rust-version = "1.87.0"
build = "build.rs"

[features]
default = []
gpl-formats = []
extra = ["dep:image", "dep:fast_image_resize", "dep:derivative"]

[dependencies]
[dependencies.thiserror]
version = "2"
default-features = false
features = []

[dependencies.serde]
version = "1"
default-features = false
features = []

[dependencies.j4rs]
version = "0.22"
default-features = false
features = ["default"]

# Optional dependencies
[dependencies.derivative]
version = "2"
default-features = false
features = []
optional = true

[dependencies.image]
version = "0.25"
default-features = false
features = []
optional = true

[dependencies.fast_image_resize]
version = "5"
default-features = false
features = ["image"]
optional = true

[dev-dependencies]
[dev-dependencies.rstest]
version = "0.26"
default-features = false
features = []

[dev-dependencies.bencher]
version = "0.1"
default-features = false
features = []


[build-dependencies]
[build-dependencies.j4rs]
version = "0.22"
default-features = false
features = ["default"]

[build-dependencies.retry]
version = "2"
default-features = false
features = []

[build-dependencies.anyhow]
version = "1"
default-features = false
features = []

[[bench]]
name = "bench_read"
harness = false
